news commits